Spring Data JDBC Extensions Support Changelog
=============================================

Changes in version 1.0.0.RC4 (July 15, 2012)
--------------------------------------------

Core
* Parameterizing classes used for mapping of advanced data types


Changes in version 1.0.0.RC3 (June 25, 2012)
--------------------------------------------

General
* Updated dependencies - Spring to 3.0.7, Querydsl to 2.6.0

Core
* Adding One-to-Many ResultSetExtractor implementation 
* DATAJDBC-32 Adding exception translation to QueryDslJdbcTemplate


Changes in version 1.0.0.RC2 (June 1, 2012)
-------------------------------------------

General
* Switched Oracle dependencies to use scope provided
* DATAJDBC-25 Adding throws clause for SQLException to doInSqlInsertWithKeyClause


Changes in version 1.0.0.RC1 (Oct 18, 2011)
-------------------------------------------

General
* DATAJDBC-13 Added documentation chapter for QueryDSL SQL module
* DATAJDBC-17 Added OSGi manifests
* DATAJDBC-14 Fixed slf4j/log4j and other dependencies


Changes in version 1.0.0.M2 (July 28, 2011)
-------------------------------------------

Core
* DATAJDBC-6 Added support for QueryDSL SQL module
  - QueryDslJdbcTemplate
    Provides implementations for a basic set of JDBC operations allowing the use of QueryDSL features for these operations.
  - SqlInsertCallback
	This callback allows for inserting rows via the QueryDSL SQLInsertClause.
  - SqlInsertWithKeyCallback
	This callback allows for inserting rows via the QueryDSL SQLInsertClause and returning the generated key.
  - SqlUpdateCallback
	This callback allows for updating rows via the QueryDSL SQLUpdateClause.
  - SqlDeleteCallback
	This callback allows for deleting rows via the QueryDSL SQLDeleteClause.

Streams AQ
* DATAJDBC-8 Fixed a potential JDBC connection leak on third-party JDBC pool when using Oracle AQ in combination with DefaultMessageListenerContainer and sharing of the connection from a local JDBC transaction.

