@@ -14,6 +14,7 @@ import org.junit.runner.RunWith;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.dao.DataAccessException;
+import org.springframework.data.jdbc.test.adt.SimpleAdvancedDataTypesDao;
 import org.springframework.jdbc.core.ConnectionCallback;
 import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.test.context.ContextConfiguration;
@@ -91,4 +92,18 @@ public class ClassicAdtTests {
     	assertTrue("", actors.size() > 0);
     }
     
+	@Transactional @Test
+	public void testStructArray() {
+ 		List<Actor> actors = dao.getAllActors();
+ 		assertTrue("", actors.size() > 0);
+		Long[] ids = new Long[actors.size()];
+		for (int i = 0; i < actors.size(); i++) {
+			ids[i] = actors.get(i).getId();
+		}
+		dao.deleteActors(ids);
+		assertTrue("", dao.getAllActors().size() == 0);
+		dao.saveActors(actors);
+		assertTrue("", dao.getAllActors().size() == actors.size());
+ 	}
+
 }
