@@ -4,4 +4,5 @@ log4j.appender.stdout.layout.ConversionPattern=%p [%c{1}] - %m%n
 
 log4j.rootLogger=DEBUG, stdout
 log4j.logger.org.springframework=INFO
-log4j.logger.com.springsource=DEBUG
+log4j.logger.org.springframework.jdbc=DEBUG
+log4j.logger.org.springframework.data.jdbc=DEBUG
