@@ -17,19 +17,23 @@
 package org.springframework.data.jdbc.support.oracle;
 
 import oracle.sql.ARRAY;
+import oracle.sql.STRUCT;
+import org.springframework.dao.InvalidDataAccessApiUsageException;
 import org.springframework.jdbc.core.SqlReturnType;
 
 import java.sql.CallableStatement;
 import java.sql.SQLException;
+import java.util.ArrayList;
+import java.util.List;
 
 /**
  * Implementation of the SqlReturnType interface, for convenient
- * access of ARRAYs of scalar values returned from stored procedure.
+ * access of ARRAYs of STUCTs returned from stored procedure.
  *
  * <p>A usage example from a StoredProcedure:
  *
- * <pre class="code">proc.declareParameter(new SqlOutParameter("return", Types.ARRAY, "ACTOR_NAME_ARRAY",
- *         new SqlReturnArray()));
+ * <pre class="code">proc.declareParameter(new SqlOutParameter("return", Types.ARRAY, "ACTOR_TYPE_ARRAY",
+ *         new SqlReturnStructArray(actorMapper)));
  * </pre>
  *
  * @author Thomas Risberg
@@ -38,17 +42,40 @@ import java.sql.SQLException;
  * @see org.springframework.jdbc.core.simple.SimpleJdbcCall
  * @see org.springframework.jdbc.object.StoredProcedure
  */
-public class SqlReturnArray implements SqlReturnType {
+public class SqlReturnStructArray<T> implements SqlReturnType {
 
-    /**
+	/** The object that will do the mapping **/
+	private StructMapper<T> mapper;
+
+	/**
+	 * Constructor that takes a parameter with the {@link StructMapper} to be used.
+	 * @param mapper the mapper
+	 */
+	public SqlReturnStructArray(StructMapper<T> mapper) {
+		this.mapper = mapper;
+	}
+
+
+	/**
      * The implementation for this specific type.  This method is called internally by the
-     * Spring Framework during the out parameter processing and it's not accessed by appplication
+     * Spring Framework during the out parameter processing and it's not accessed by application
      * code directly.
      */
+	@SuppressWarnings("unchecked")
     public Object getTypeValue(CallableStatement cs, int i, int sqlType, String typeName)
                                         throws SQLException {
         ARRAY array = (ARRAY) cs.getObject(i);
-        Object values = array.getArray();
-        return values;
+        Object[] structValues = (Object[]) array.getArray();
+		List<T> values = new ArrayList<T>();
+		for (int x = 0; x < structValues.length; x++) {
+			Object struct = structValues[x];
+			if (struct instanceof STRUCT) {
+				values.add(mapper.fromStruct((STRUCT) struct));
+			}
+			else {
+				throw new InvalidDataAccessApiUsageException("Expected STRUCT but got " + struct.getClass().getName());
+			}
+		}
+        return values.toArray();
     }
 }
